--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "expo": "~49.0.13",
-    "expo-font": "^11.6.0",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.4.0",
     "expo-router": "^2.0.9",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.5",
     "react-native-dotenv": "^3.4.9"
   },
