--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^18.2.0",
     "react-native": "0.72.5",
     "react-native-dotenv": "^3.4.9",
+    "react-native-ico": "^43.7.4",
+    "react-native-ico-dazzle-line": "^4.1.5",
     "react-native-ico-material-design": "^4.1.5"
   },
   "devDependencies": {
